Reporte BASE GENERAL
 - Organizarlo por MARCA

--- a/views/reportes/baseGeneral.twig
+++ b/views/reportes/baseGeneral.twig
@@ -72,98 +72,30 @@
                             <th>NOMBRE SOCIO</th>
                             <th>CEDULA</th>
                             <th>TELEFONO ULTIMO CONTACTO</th>
+                            <th>MARCA</th>
 
-                            <th>TIPO DE CAMPAÑA DINERS</th>
-                            <th>EJECUTIVO DINERS</th>
-                            <th>CICLO DINERS</th>
-                            <th>EDAD FACTURADA DINERS</th>
-                            <th>SALDO TOTAL DEUDA DINERS</th>
-                            <th>RIESGO TOTAL DINERS</th>
-                            <th>INTERESES TOTAL DINERS</th>
-                            <th>RECUPERADO DINERS</th>
-                            <th>PAGO MINIMO DINERS</th>
-                            <th>FECHA MAXIMA PAGO DINERS</th>
-                            <th>NUMERO DIFERIDOS DINERS</th>
-                            <th>NUMERO DE REFINANCIACIONES HISTORICA DINERS</th>
-                            <th>PLAZO DE FINANCIAMIENTO ACTUAL DINERS</th>
-                            <th>MOTIVO CIERRE DINERS</th>
-                            <th>OFERTA VALOR DINERS</th>
-                            <th>PENDIENTE ACTUALES DINERS</th>
-                            <th>PENDIENTE 30 DIAS DINERS</th>
-                            <th>PENDIENTE 60 DIAS DINERS</th>
-                            <th>PENDIENTE 90 DIAS DINERS</th>
-                            <th>PENDIENTE MAS 90 DIAS DINERS</th>
-                            <th>CRÉDITO INMEDIATO DINERS</th>
-                            <th>PRODUCTO DINERS</th>
-
-                            <th>TIPO DE CAMPAÑA VISA</th>
-                            <th>EJECUTIVO VISA</th>
-                            <th>CICLO VISA</th>
-                            <th>EDAD FACTURADA VISA</th>
-                            <th>SALDO TOTAL DEUDA VISA</th>
-                            <th>RIESGO TOTAL VISA</th>
-                            <th>INTERESES TOTAL VISA</th>
-                            <th>RECUPERADO VISA</th>
-                            <th>PAGO MINIMO VISA</th>
-                            <th>FECHA MAXIMA PAGO VISA</th>
-                            <th>NUMERO DIFERIDOS VISA</th>
-                            <th>NUMERO DE REFINANCIACIONES HISTORICA VISA</th>
-                            <th>PLAZO DE FINANCIAMIENTO ACTUAL VISA</th>
-                            <th>MOTIVO CIERRE VISA</th>
-                            <th>OFERTA VALOR VISA</th>
-                            <th>PENDIENTE ACTUALES VISA</th>
-                            <th>PENDIENTE 30 DIAS VISA</th>
-                            <th>PENDIENTE 60 DIAS VISA</th>
-                            <th>PENDIENTE 90 DIAS VISA</th>
-                            <th>PENDIENTE MAS 90 DIAS VISA</th>
-                            <th>CRÉDITO INMEDIATO VISA</th>
-                            <th>PRODUCTO VISA</th>
-
-                            <th>TIPO DE CAMPAÑA DISCOVER</th>
-                            <th>EJECUTIVO DISCOVER</th>
-                            <th>CICLO DISCOVER</th>
-                            <th>EDAD FACTURADA DISCOVER</th>
-                            <th>SALDO TOTAL DEUDA DISCOVER</th>
-                            <th>RIESGO TOTAL DISCOVER</th>
-                            <th>INTERESES TOTAL DISCOVER</th>
-                            <th>RECUPERADO DISCOVER</th>
-                            <th>PAGO MINIMO DISCOVER</th>
-                            <th>FECHA MAXIMA PAGO DISCOVER</th>
-                            <th>NUMERO DIFERIDOS DISCOVER</th>
-                            <th>NUMERO DE REFINANCIACIONES HISTORICA DISCOVER</th>
-                            <th>PLAZO DE FINANCIAMIENTO ACTUAL DISCOVER</th>
-                            <th>MOTIVO CIERRE DISCOVER</th>
-                            <th>OFERTA VALOR DISCOVER</th>
-                            <th>PENDIENTE ACTUALES DISCOVER</th>
-                            <th>PENDIENTE 30 DIAS DISCOVER</th>
-                            <th>PENDIENTE 60 DIAS DISCOVER</th>
-                            <th>PENDIENTE 90 DIAS DISCOVER</th>
-                            <th>PENDIENTE MAS 90 DIAS DISCOVER</th>
-                            <th>CRÉDITO INMEDIATO DISCOVER</th>
-                            <th>PRODUCTO DISCOVER</th>
-
-                            <th>TIPO DE CAMPAÑA MASTERCARD</th>
-                            <th>EJECUTIVO MASTERCARD</th>
-                            <th>CICLO MASTERCARD</th>
-                            <th>EDAD FACTURADA MASTERCARD</th>
-                            <th>SALDO TOTAL DEUDA MASTERCARD</th>
-                            <th>RIESGO TOTAL MASTERCARD</th>
-                            <th>INTERESES TOTAL MASTERCARD</th>
-                            <th>RECUPERADO MASTERCARD</th>
-                            <th>PAGO MINIMO MASTERCARD</th>
-                            <th>FECHA MAXIMA PAGO MASTERCARD</th>
-                            <th>NUMERO DIFERIDOS MASTERCARD</th>
-                            <th>NUMERO DE REFINANCIACIONES HISTORICA MASTERCARD</th>
-                            <th>PLAZO DE FINANCIAMIENTO ACTUAL MASTERCARD</th>
-                            <th>MOTIVO CIERRE MASTERCARD</th>
-                            <th>OFERTA VALOR MASTERCARD</th>
-                            <th>PENDIENTE ACTUALES MASTERCARD</th>
-                            <th>PENDIENTE 30 DIAS MASTERCARD</th>
-                            <th>PENDIENTE 60 DIAS MASTERCARD</th>
-                            <th>PENDIENTE 90 DIAS MASTERCARD</th>
-                            <th>PENDIENTE MAS 90 DIAS MASTERCARD</th>
-                            <th>CRÉDITO INMEDIATO MASTERCARD</th>
-                            <th>PRODUCTO MASTERCARD</th>
+                            <th>TIPO DE CAMPAÑA</th>
+                            <th>EJECUTIVO</th>
+                            <th>CICLO</th>
+                            <th>EDAD FACTURADA</th>
+                            <th>SALDO TOTAL DEUDA</th>
+                            <th>RIESGO TOTAL</th>
+                            <th>INTERESES TOTAL</th>
+                            <th>RECUPERADO</th>
+                            <th>PAGO MINIMO</th>
+                            <th>FECHA MAXIMA PAGO</th>
+                            <th>NUMERO DIFERIDOS</th>
+                            <th>NUMERO DE REFINANCIACIONES HISTORICA</th>
+                            <th>PLAZO DE FINANCIAMIENTO ACTUAL</th>
+                            <th>MOTIVO CIERRE</th>
+                            <th>OFERTA VALOR</th>
+                            <th>PENDIENTE ACTUALES</th>
+                            <th>PENDIENTE 30 DIAS</th>
+                            <th>PENDIENTE 60 DIAS</th>
+                            <th>PENDIENTE 90 DIAS</th>
+                            <th>PENDIENTE MAS 90 DIAS</th>
+                            <th>CRÉDITO INMEDIATO</th>
+                            <th>PRODUCTO</th>
 
                             <th>RESULTADO</th>
                             <th>ACCION</th>
@@ -184,98 +116,30 @@
 							<td v-html="d.nombres"></td>
                             <td v-html="d.cedula"></td>
                             <td v-html="d.telefono_contacto"></td>
+                            <td v-html="d.tarjeta"></td>
 
-                            <td v-html='d.tipo_campana_diners'></td>
-                            <td v-html='d.ejecutivo_diners'></td>
-                            <td v-html='d.ciclo_diners'></td>
-                            <td v-html='d.edad_diners'></td>
-                            <td v-html='d.saldo_total_deuda_diners'></td>
-                            <td v-html='d.riesgo_total_diners'></td>
-                            <td v-html='d.interes_total_diners'></td>
-                            <td v-html='d.recuperado_diners'></td>
-                            <td v-html='d.pago_minimo_diners'></td>
-                            <td v-html='d.fecha_maxima_pago_diners'></td>
-                            <td v-html='d.numero_diferidos_diners'></td>
-                            <td v-html='d.numero_refinanciaciones_historica_diners'></td>
-                            <td v-html='d.plazo_financiamiento_actual_diners'></td>
-                            <td v-html='d.motivo_cierre_diners'></td>
-                            <td v-html='d.oferta_valor_diners'></td>
-                            <td v-html='d.pendiente_actuales_diners'></td>
-                            <td v-html='d.pendiente_30_diners'></td>
-                            <td v-html='d.pendiente_60_diners'></td>
-                            <td v-html='d.pendiente_90_diners'></td>
-                            <td v-html='d.pendiente_mas_90_diners'></td>
-                            <td v-html='d.credito_inmediato_diners'></td>
-                            <td v-html='d.producto_diners'></td>
-
-                            <td v-html='d.tipo_campana_visa'></td>
-                            <td v-html='d.ejecutivo_visa'></td>
-                            <td v-html='d.ciclo_visa'></td>
-                            <td v-html='d.edad_visa'></td>
-                            <td v-html='d.saldo_total_deuda_visa'></td>
-                            <td v-html='d.riesgo_total_visa'></td>
-                            <td v-html='d.interes_total_visa'></td>
-                            <td v-html='d.recuperado_visa'></td>
-                            <td v-html='d.pago_minimo_visa'></td>
-                            <td v-html='d.fecha_maxima_pago_visa'></td>
-                            <td v-html='d.numero_diferidos_visa'></td>
-                            <td v-html='d.numero_refinanciaciones_historica_visa'></td>
-                            <td v-html='d.plazo_financiamiento_actual_visa'></td>
-                            <td v-html='d.motivo_cierre_visa'></td>
-                            <td v-html='d.oferta_valor_visa'></td>
-                            <td v-html='d.pendiente_actuales_visa'></td>
-                            <td v-html='d.pendiente_30_visa'></td>
-                            <td v-html='d.pendiente_60_visa'></td>
-                            <td v-html='d.pendiente_90_visa'></td>
-                            <td v-html='d.pendiente_mas_90_visa'></td>
-                            <td v-html='d.credito_inmediato_visa'></td>
-                            <td v-html='d.producto_visa'></td>
-
-                            <td v-html='d.tipo_campana_discover'></td>
-                            <td v-html='d.ejecutivo_discover'></td>
-                            <td v-html='d.ciclo_discover'></td>
-                            <td v-html='d.edad_discover'></td>
-                            <td v-html='d.saldo_total_deuda_discover'></td>
-                            <td v-html='d.riesgo_total_discover'></td>
-                            <td v-html='d.interes_total_discover'></td>
-                            <td v-html='d.recuperado_discover'></td>
-                            <td v-html='d.pago_minimo_discover'></td>
-                            <td v-html='d.fecha_maxima_pago_discover'></td>
-                            <td v-html='d.numero_diferidos_discover'></td>
-                            <td v-html='d.numero_refinanciaciones_historica_discover'></td>
-                            <td v-html='d.plazo_financiamiento_actual_discover'></td>
-                            <td v-html='d.motivo_cierre_discover'></td>
-                            <td v-html='d.oferta_valor_discover'></td>
-                            <td v-html='d.pendiente_actuales_discover'></td>
-                            <td v-html='d.pendiente_30_discover'></td>
-                            <td v-html='d.pendiente_60_discover'></td>
-                            <td v-html='d.pendiente_90_discover'></td>
-                            <td v-html='d.pendiente_mas_90_discover'></td>
-                            <td v-html='d.credito_inmediato_discover'></td>
-                            <td v-html='d.producto_discover'></td>
-
-                            <td v-html='d.tipo_campana_mastercard'></td>
-                            <td v-html='d.ejecutivo_mastercard'></td>
-                            <td v-html='d.ciclo_mastercard'></td>
-                            <td v-html='d.edad_mastercard'></td>
-                            <td v-html='d.saldo_total_deuda_mastercard'></td>
-                            <td v-html='d.riesgo_total_mastercard'></td>
-                            <td v-html='d.interes_total_mastercard'></td>
-                            <td v-html='d.recuperado_mastercard'></td>
-                            <td v-html='d.pago_minimo_mastercard'></td>
-                            <td v-html='d.fecha_maxima_pago_mastercard'></td>
-                            <td v-html='d.numero_diferidos_mastercard'></td>
-                            <td v-html='d.numero_refinanciaciones_historica_mastercard'></td>
-                            <td v-html='d.plazo_financiamiento_actual_mastercard'></td>
-                            <td v-html='d.motivo_cierre_mastercard'></td>
-                            <td v-html='d.oferta_valor_mastercard'></td>
-                            <td v-html='d.pendiente_actuales_mastercard'></td>
-                            <td v-html='d.pendiente_30_mastercard'></td>
-                            <td v-html='d.pendiente_60_mastercard'></td>
-                            <td v-html='d.pendiente_90_mastercard'></td>
-                            <td v-html='d.pendiente_mas_90_mastercard'></td>
-                            <td v-html='d.credito_inmediato_mastercard'></td>
-                            <td v-html='d.producto_mastercard'></td>
+                            <td v-html='d.tipo_campana'></td>
+                            <td v-html='d.ejecutivo'></td>
+                            <td v-html='d.ciclo'></td>
+                            <td v-html='d.edad'></td>
+                            <td v-html='d.saldo_total_deuda'></td>
+                            <td v-html='d.riesgo_total'></td>
+                            <td v-html='d.interes_total'></td>
+                            <td v-html='d.recuperado'></td>
+                            <td v-html='d.pago_minimo'></td>
+                            <td v-html='d.fecha_maxima_pago'></td>
+                            <td v-html='d.numero_diferidos'></td>
+                            <td v-html='d.numero_refinanciaciones_historica'></td>
+                            <td v-html='d.plazo_financiamiento_actual'></td>
+                            <td v-html='d.motivo_cierre'></td>
+                            <td v-html='d.oferta_valor'></td>
+                            <td v-html='d.pendiente_actuales'></td>
+                            <td v-html='d.pendiente_30'></td>
+                            <td v-html='d.pendiente_60'></td>
+                            <td v-html='d.pendiente_90'></td>
+                            <td v-html='d.pendiente_mas_90'></td>
+                            <td v-html='d.credito_inmediato'></td>
+                            <td v-html='d.producto'></td>
 
                             <td v-html='d.nivel_1_texto'></td>
                             <td v-html='d.nivel_2_texto'></td>
@@ -342,7 +206,7 @@
                 var self = this;
                 $('#btnExportar').click(function () {
                     var data = {
-                        filtros: form.serializeForm()
+                        datos: self.datos
                     };
                     $('#json').val(JSON.stringify(data));
                     $('#exportForm').submit();
