--- a/views/reportes/general.twig
+++ b/views/reportes/general.twig
@@ -153,6 +153,9 @@
                         datos: self.datos,
                         total: self.total,
                         resumen: self.resumen,
+                        resumen_totales: self.resumen_totales,
+                        total_resumen_totales: self.total_resumen_totales,
+                        resumen_totales_foot: self.resumen_totales_foot,
                     };
                     $('#json').val(JSON.stringify(data));
                     $('#exportForm').submit();
