--- a/views/reportes/baseCarga.twig
+++ b/views/reportes/baseCarga.twig
@@ -69,7 +69,7 @@
 							<td v-html="d.t3"></td>
 							<td v-html="d.ciudad_cuenta"></td>
 							<td v-html="d.zona_cuenta"></td>
-							<td v-html="d.motivo_no_pago_anterior"></td>
+							<td v-html="d.motivo_anterior"></td>
 							<td v-html="d.resultado_anterior"></td>
 							<td v-html="d.observacion_anterior"></td>
 							<td v-html="d.nivel_2_texto"></td>
