--- a/views/reportes/baseGeneral.twig
+++ b/views/reportes/baseGeneral.twig
@@ -73,6 +73,7 @@
                             <th>CEDULA</th>
                             <th>TELEFONO ULTIMO CONTACTO</th>
                             <th>MARCA</th>
+                            <th>CÓDIGO DE OPERACIÓN</th>
 
                             <th>TIPO DE CAMPAÑA</th>
                             <th>EJECUTIVO</th>
@@ -117,6 +118,7 @@
                             <td v-html="d.cedula"></td>
                             <td v-html="d.telefono_contacto"></td>
                             <td v-html="d.tarjeta"></td>
+                            <td v-html="d.codigo_operacion"></td>
 
                             <td v-html='d.tipo_campana'></td>
                             <td v-html='d.ejecutivo'></td>
