--- a/views/reportes/baseGeneral.twig
+++ b/views/reportes/baseGeneral.twig
@@ -74,6 +74,8 @@
                             <th>TELEFONO ULTIMO CONTACTO</th>
                             <th>MARCA</th>
                             <th>CÓDIGO DE OPERACIÓN</th>
+                            <th>ZONA</th>
+                            <th>CIUDAD</th>
 
                             <th>TIPO DE CAMPAÑA</th>
                             <th>EJECUTIVO</th>
@@ -119,6 +121,8 @@
                             <td v-html="d.telefono_contacto"></td>
                             <td v-html="d.tarjeta"></td>
                             <td v-html="d.codigo_operacion"></td>
+                            <td v-html="d.zona"></td>
+                            <td v-html="d.ciudad"></td>
 
                             <td v-html='d.tipo_campana'></td>
                             <td v-html='d.ejecutivo'></td>
