--- a/views/reportes/filtrosInformeJornada.twig
+++ b/views/reportes/filtrosInformeJornada.twig
@@ -50,6 +50,13 @@
 						<option v-for="(v,k) in minutos" v-html="v" :value="k"></option>
 					</select>
 				</div>
+
+				<div class="col-sm-3">
+					<b>Asignación del día</b> <br>
+					<div class="input-group">
+						<input type="text" class="form-control" name="asignacion_dia" id="asignacion_dia" />
+					</div>
+				</div>
 			</div>
 		</form>
 	</div>
