--- a/views/reportes/baseGeneral.twig
+++ b/views/reportes/baseGeneral.twig
@@ -80,6 +80,7 @@
                             <th>TIPO DE CAMPAÑA</th>
                             <th>EJECUTIVO</th>
                             <th>CICLO</th>
+                            <th>EDAD REAL</th>
                             <th>EDAD FACTURADA</th>
                             <th>SALDO TOTAL DEUDA</th>
                             <th>RIESGO TOTAL</th>
@@ -128,6 +129,7 @@
                             <td v-html='d.ejecutivo'></td>
                             <td v-html='d.ciclo'></td>
                             <td v-html='d.edad'></td>
+                            <td v-html='d.edad_asignacion'></td>
                             <td v-html='d.saldo_total_deuda'></td>
                             <td v-html='d.riesgo_total'></td>
                             <td v-html='d.interes_total'></td>
