--- a/views/reportes/baseGeneral.twig
+++ b/views/reportes/baseGeneral.twig
@@ -82,6 +82,9 @@
                             <th>CICLO</th>
                             <th>EDAD REAL</th>
                             <th>EDAD FACTURADA</th>
+                            <th>TOTAL ASIGNADO</th>
+
+
                             <th>SALDO TOTAL DEUDA</th>
                             <th>RIESGO TOTAL</th>
                             <th>INTERESES TOTAL</th>
@@ -130,6 +133,8 @@
                             <td v-html='d.ciclo'></td>
                             <td v-html='d.edad'></td>
                             <td v-html='d.edad_asignacion'></td>
+                            <td v-html='d.total_asignado'></td>
+
                             <td v-html='d.saldo_total_deuda'></td>
                             <td v-html='d.riesgo_total'></td>
                             <td v-html='d.interes_total'></td>
